Added path to super directory

--- a/File Organize.ipynb
+++ b/File Organize.ipynb
@@ -2,11 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T15:35:44.230919Z",
-     "start_time": "2019-11-19T15:35:44.216493Z"
+     "end_time": "2019-11-20T01:16:56.345776Z",
+     "start_time": "2019-11-20T01:16:56.337988Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ghostvortex/Documents/DL_Project\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd ~/Documents/DL_Project/      # Specify path for the super directory which has all the object folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-20T01:25:12.291070Z",
+     "start_time": "2019-11-20T01:25:12.275043Z"
     }
    },
    "outputs": [],
@@ -21,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T15:36:07.894988Z",
-     "start_time": "2019-11-19T15:36:05.430109Z"
+     "end_time": "2019-11-20T01:25:15.872333Z",
+     "start_time": "2019-11-20T01:25:13.715598Z"
     }
    },
    "outputs": [
@@ -78,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-19T15:36:09.807108Z",
-     "start_time": "2019-11-19T15:36:07.897839Z"
+     "end_time": "2019-11-20T01:26:36.654161Z",
+     "start_time": "2019-11-20T01:26:34.987298Z"
     }
    },
    "outputs": [
